change tel in header - add margin for correct overflow

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -52,6 +52,8 @@
   }
 
   @include vp-767 {
+    display: block;
+    margin-left: 10px;
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 0.4px;
